app-with-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-with-storage
  template:
    metadata:
      labels:
        app: app-with-storage
    spec:
      containers:
      - name: web-app
        image: manojsinghdocker/my-web-app:latest
        volumeMounts:
        - mountPath: "/data"
          name: storage-volume
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: pvc-storage
