cmd-health-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmd-health-check
spec:
  containers:
    - name: my-app
      image: busybox
      args:
        - /bin/sh
        - -c
        - touch /tmp/healthy; sleep 30; rm -f /tmp/healthy; sleep 600
      livenessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 10
