configmap-env-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-env-demo
spec:
  containers:
    - name: myapp
      command: ["/bin/sh", "-c", "printenv"]
      command: ["sleep", "3600"]
      image: busybox
