emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: "/cache"
      name: temp-storage
  volumes:
  - name: temp-storage
    emptyDir: {}
