rolling-update-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-update-deployment
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1  # Max number of pods that can be created above the desired number of pods
      maxUnavailable: 1  # Max number of pods that can be unavailable during the update
  selector:
    matchLabels:
      app: rolling-app
  template:
    metadata:
      labels:
        app: rolling-app
    spec:
      containers:
      - name: app-container
        image: manojsinghdocker/my-web-app:latest
        ports:
        - containerPort: 8080
