secret-env-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-demo
spec:
  containers:
    - name: myapp
      image: busybox
      command: ["sleep", "3600"]
