secret-volume-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-demo
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: db-secret
  containers:
    - name: myapp
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - name: secret-volume
          mountPath: "/etc/secret"
