tcp-health-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tcp-health-check
spec:
  containers:
    - name: my-app
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
